--- a/css/styles.css
+++ b/css/styles.css
@@ -1,46 +1,44 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-body{
-    font-family: 'Noto Sans JP', sans-serif;
+body {
+  font-family: "Noto Sans JP", sans-serif;
 }
-.nav-logo{
-    height: 3rem;
+.nav-logo {
+  height: 3rem;
 }
-.appointment-btn{
-    background-color: #1a99dd;
-    color: white !important;
-    border-radius: 4em;
-    padding-left: 15px !important;
-    padding-right: 15px !important; 
-    padding-top: 10px !important;
-    padding-bottom: 14px !important;
+.appointment-btn {
+  background-color: #1a99dd;
+  color: white !important;
+  border-radius: 4em;
+  padding-left: 15px !important;
+  padding-right: 15px !important;
+  padding-top: 10px !important;
+  padding-bottom: 14px !important;
 }
-.btn-primary{
-    background-color: transparent !important;
-    border-color: #1a99dd !important;
-    color: #1a99dd !important;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+.btn-primary {
+  background-color: transparent !important;
+  border-color: #1a99dd !important;
+  color: #1a99dd !important;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
-.btn-primary:hover{
-    background-color: #1a99dd !important;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22) !important;
-    color: white !important;
-}
-
-a{
-    text-decoration: none !important;
+.btn-primary:hover {
+  background-color: #1a99dd !important;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22) !important;
+  color: white !important;
 }
 
+a {
+  text-decoration: none !important;
+}
 
 ul {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 .footer-section {
   background: #151414;
@@ -85,12 +83,12 @@ ul {
   margin-bottom: 30px;
 }
 .footer-logo img {
-    max-width: 200px;
+  max-width: 200px;
 }
 .footer-text p {
   margin-bottom: 14px;
   font-size: 14px;
-      color: #7e7e7e;
+  color: #7e7e7e;
   line-height: 28px;
 }
 .footer-social-icon span {
@@ -98,7 +96,7 @@ ul {
   display: block;
   font-size: 20px;
   font-weight: 700;
-  font-family: 'Poppins', sans-serif;
+
   margin-bottom: 20px;
 }
 .footer-social-icon a {
@@ -113,14 +111,14 @@ ul {
   line-height: 38px;
   border-radius: 50%;
 }
-.facebook-bg{
-  background: #3B5998;
+.facebook-bg {
+  background: #3b5998;
 }
-.twitter-bg{
-  background: #55ACEE;
+.twitter-bg {
+  background: #55acee;
 }
-.google-bg{
-  background: #DD4B39;
+.google-bg {
+  background: #dd4b39;
 }
 .footer-widget-heading h3 {
   color: #fff;
@@ -144,7 +142,7 @@ ul {
   width: 50%;
   margin-bottom: 12px;
 }
-.footer-widget ul li a:hover{
+.footer-widget ul li a:hover {
   color: #1a99dd;
 }
 .footer-widget ul li a {
@@ -158,24 +156,24 @@ ul {
 .subscribe-form input {
   width: 100%;
   padding: 14px 28px;
-  background: #2E2E2E;
-  border: 1px solid #2E2E2E;
+  background: #2e2e2e;
+  border: 1px solid #2e2e2e;
   color: #fff;
 }
 .subscribe-form button {
-    position: absolute;
-    right: 0;
-    background: #1a99dd;
-    padding: 13px 20px;
-    border: 1px solid #1a99dd;
-    top: 0;
+  position: absolute;
+  right: 0;
+  background: #1a99dd;
+  padding: 13px 20px;
+  border: 1px solid #1a99dd;
+  top: 0;
 }
 .subscribe-form button i {
   color: #fff;
   font-size: 22px;
   transform: rotate(-6deg);
 }
-.copyright-area{
+.copyright-area {
   background: #202020;
   padding: 25px 0;
 }
@@ -184,14 +182,14 @@ ul {
   font-size: 14px;
   color: #878787;
 }
-.copyright-text p a{
+.copyright-text p a {
   color: #1a99dd;
 }
 .footer-menu li {
   display: inline-block;
   margin-left: 20px;
 }
-.footer-menu li:hover a{
+.footer-menu li:hover a {
   color: #1a99dd;
 }
 .footer-menu li a {
