--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 body {
-  font-family: "Noto Sans JP", sans-serif;
+  font-family: 'Zilla Slab', serif;
 }
 .nav-logo {
   height: 3rem;
