--- a/css/styles.css
+++ b/css/styles.css
@@ -309,3 +309,62 @@ ul {
 input[type='checkbox']{
   margin-right: 3px !important;
 }
+
+.health-icon{
+  color: #1a99dd;
+  transition: 0.8s;
+}
+.health-icon1:hover{
+  transform: rotate(45deg);
+}
+.health-icon2:hover{
+  transform: scale(1.2);
+}
+.health-icon3:hover{
+  transform: rotate(-45deg);
+}
+.health-icon4:hover{
+  transform: rotate(-45deg);
+}
+.health-icon5:hover{
+  transform: scale(1.2);
+}
+.health-icon6:hover{
+  transform: rotate(45deg);
+}
+.swing {
+  animation: swing ease-in-out 1s infinite alternate;
+  transform-origin: center -20px;
+  float:left;
+  box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+}
+.swing img {
+  border: 5px solid #f8f8f8;
+  display: block;
+}
+.swing:after{
+  content: '';
+  position: absolute;  
+  width: 20px; height: 20px;  
+  border: 1px solid #999;
+  top: -10px; left: 50%;
+  z-index: 0;
+  border-bottom: none;
+  border-right: none;
+  transform: rotate(45deg);
+}
+/* nail */
+.swing:before{
+  content: '';
+  position: absolute;
+  width: 5px; height: 5px;
+  top: -14px;left: 54%;
+  z-index: 5;
+  border-radius: 50% 50%;
+  background: #000;
+}
+
+@keyframes swing {
+  0% { transform: rotate(3deg); }
+  100% { transform: rotate(-3deg); }
+}
