--- a/css/styles.css
+++ b/css/styles.css
@@ -380,3 +380,42 @@ input[type='checkbox']{
   cursor: pointer;
   text-decoration: underline;
 }
+
+
+.open-button {
+  color: red;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  background-color: transparent;
+}
+
+/* The popup chat - hidden by default */
+.chat-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  z-index: 9;
+  height: 60%;
+  width: 25%;
+  background-color: white;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  /* border-radius: 13px; */
+  border-top-left-radius: 10px;
+  overflow: hidden;
+}
+
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
