--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Poppins&family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap');
 
 * {
@@ -8,7 +9,10 @@
   box-sizing: border-box;
 }
 body {
-  font-family: 'Zilla Slab', serif;
+  font-family: 'Poppins', sans-serif;
+}
+.injection:hover{
+  transform: rotate(45deg);
 }
 .nav-logo {
   height: 3rem;
@@ -620,4 +624,11 @@ input[type='checkbox']{
  background-color:#2487ce;
  border-width: 2px;
  font-weight: bold;
+}
+
+.line{
+  width: 70px;
+    height: 4px;
+    background-color: #1a99dd;
+    margin: 0 auto;
 }
